--- a/testCases/Test_three.html
+++ b/testCases/Test_three.html
@@ -1,235 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8" />
-<title>PixelStortion – Transport Sync Test (Git + YouTube)</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <title>SilenceHome – Transport Sync Test (Gallery Map)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- YouTube IFrame API -->
-<script src="https://www.youtube.com/iframe_api"></script>
-
-<style>
-/* ===== VISUAL LAYOUT (MATCH REAL PAGE GEOMETRY) ===== */
-
-body {
-  margin: 0;
-  background: #050505;
-  color: #e0e0e0;
-  font-family: system-ui, monospace;
-}
-
-.wrapper {
-  width: 920px;
-  height: 520px;
-  margin: 60px auto;
-  border: 1px solid #333;
-  display: flex;
-  background: #000;
-}
-
-.left-panel {
-  width: 30%;
-  border-right: 1px solid #333;
-}
-
-.right-panel {
-  width: 70%;
-  position: relative;
-  overflow: hidden;
-}
-
-/* ===== IMAGE LAYER ===== */
-
-.story-image {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.story-image.active {
-  opacity: 1;
-}
-
-/* ===== YOUTUBE AUDIO LAYER ===== */
-
-#youtube-player {
-  position: absolute;
-  inset: 0;
-  pointer-events: none;
-  opacity: 0;          /* invisible but alive */
-  z-index: -1;
-}
-
-/* ===== CONTROLS ===== */
-
-.controls {
-  width: 920px;
-  margin: 20px auto;
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-}
-
-button {
-  padding: 10px 20px;
-  font-size: 14px;
-}
-</style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 
-<body>
+<body class="bg-black text-gray-200 overflow-hidden">
 
-<div class="wrapper">
-  <div class="left-panel"></div>
+    <!-- TOP BAR -->
+    <div class="fixed top-0 left-0 right-0 h-14 bg-zinc-900 border-b border-gray-800 flex items-center px-6 z-50">
+        <div class="flex gap-6 font-mono text-xs tracking-widest uppercase">
+            <span class="text-gray-400">TRANSMISSION</span>
+            <span class="text-gray-400">FILES</span>
+            <span class="text-gray-400">SUBJECTS</span>
+            <span class="text-green-500">AUDIO LOGS</span>
+        </div>
+    </div>
 
-  <div class="right-panel">
+    <!-- MAIN -->
+    <main class="absolute top-14 bottom-24 left-0 right-0 flex items-center justify-center">
 
-    <!-- Image buffers (double-buffered for crossfade) -->
-    <img id="imgA" class="story-image">
-    <img id="imgB" class="story-image">
+        <!-- OUTER FRAME -->
+        <div class="bg-zinc-900/60 border border-gray-800 rounded-xl overflow-hidden flex h-[600px] w-[1100px]">
 
-    <!-- YouTube audio -->
-    <div id="youtube-player"></div>
-  </div>
-</div>
+            <!-- LEFT FRAME -->
+            <div class="w-1/3 border-r border-gray-800 bg-black/40"></div>
 
-<div class="controls">
-  <button onclick="transportPlay()">PLAY</button>
-  <button onclick="transportPause()">PAUSE</button>
-  <button onclick="transportStop()">STOP</button>
-</div>
+            <!-- RIGHT FRAME -->
+            <div class="w-2/3 relative bg-black overflow-hidden">
 
-<script>
-/* ======================================================
-   CONFIG (LOCKED TO YOUR REQUIREMENTS)
-   ====================================================== */
+                <!-- STORY FRAMES (MATCH PRODUCTION IDS) -->
+                <img id="story-bg-1" crossorigin="anonymous"
+                    class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-500">
+                <img id="story-bg-2" crossorigin="anonymous"
+                    class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-500">
 
-const VIDEO_ID = "MhEeDcdscrs";
-const IMAGE_BASE_PATH = "assets/images/track6/";
-const IMAGE_COUNT = 30;
+                <!-- YOUTUBE (AUDIO ONLY) -->
+                <div id="youtube-player" allow="autoplay; encrypted-media"
+                    class="absolute inset-0 z-[-1] opacity-0 pointer-events-none"></div>
 
-const IMAGE_DURATION_MS = 7000;   // fixed 7s
-const FADE_DURATION_MS  = 500;    // fixed 0.5s
+                <!-- OVERLAY -->
+                <div
+                    class="absolute inset-0 bg-gradient-to-b from-black/30 via-black/50 to-black/70 pointer-events-none">
+                </div>
 
-/* ======================================================
-   STATE
-   ====================================================== */
+            </div>
+        </div>
+    </main>
 
-let ytPlayer = null;
-let transportState = "STOP";   // STOP | PLAY | PAUSE
+    <!-- TRANSPORT -->
+    <div
+        class="fixed bottom-0 left-0 right-0 h-24 bg-zinc-900 border-t border-gray-800 flex items-center justify-center gap-6 z-50">
+        <button onclick="play()" class="w-12 h-12 rounded-full bg-white text-black">▶</button>
+        <button onclick="pause()" class="w-12 h-12 rounded-full border border-gray-600">⏸</button>
+        <button onclick="stop()" class="w-12 h-12 rounded-full border border-gray-600">■</button>
+    </div>
 
-let imageIndex = 0;
-let activeSlot = "A";
-let imageTimer = null;
+    <script>
+        /* ===== CONFIG ===== */
+        const VIDEO_ID = "MhEeDcdscrs";
+        const MAP_URL =
+            "https://njsalubrious.github.io/pixelstortion-assets/assets_for_ethel_songs/gallery_map.json";
+        const TRACK_KEY = "track_06";        // Polished Vomit
+        const IMAGE_INTERVAL = 7000;
 
-/* ======================================================
-   IMAGE SEQUENCE (DETERMINISTIC)
-   ====================================================== */
+        /* ===== STATE ===== */
+        let ytPlayer;
+        let ytReady = false;
+        let playing = false;
+        let imageIndex = 0;
+        let timer = null;
+        let activeFrame = 1;
+        let imageList = [];
 
-const imgA = document.getElementById("imgA");
-const imgB = document.getElementById("imgB");
+        /* ===== FRAME ELEMENTS ===== */
+        const frame1 = document.getElementById("story-bg-1");
+        const frame2 = document.getElementById("story-bg-2");
 
-function imageUrl(index) {
-  const num = String(index + 1).padStart(3, "0");
-  return `${IMAGE_BASE_PATH}${num}.jpg`;
-}
+        /* ===== LOAD GALLERY MAP (SOURCE OF TRUTH) ===== */
+        async function loadGallery() {
+            try {
+                console.log("Loading gallery map...");
+                const res = await fetch(MAP_URL, { cache: "no-store" });
+                const map = await res.json();
+                imageList = map[TRACK_KEY] || [];
+                console.log("Gallery loaded:", imageList.length, "images for", TRACK_KEY);
+            } catch (e) {
+                console.error("Failed to load gallery:", e);
+            }
+        }
 
-function showImage(index) {
-  const nextImg = activeSlot === "A" ? imgB : imgA;
-  const prevImg = activeSlot === "A" ? imgA : imgB;
+        /* ===== IMAGE DISPLAY ===== */
+        function showImage(i) {
+            if (!imageList.length) {
+                console.warn("No images in list");
+                return;
+            }
 
-  nextImg.onload = () => {
-    nextImg.classList.add("active");
-    prevImg.classList.remove("active");
-    activeSlot = activeSlot === "A" ? "B" : "A";
-  };
+            const url = imageList[i];
+            console.log("Showing image", i, ":", url);
+            const active = activeFrame === 1 ? frame1 : frame2;
+            const inactive = activeFrame === 1 ? frame2 : frame1;
 
-  nextImg.src = imageUrl(index);
+            active.onload = () => {
+                active.classList.add("opacity-100");
+                inactive.classList.remove("opacity-100");
+                activeFrame = activeFrame === 1 ? 2 : 1;
+            };
 
-  // handle cached images
-  if (nextImg.complete && nextImg.naturalHeight !== 0) {
-    nextImg.onload();
-  }
-}
+            active.onerror = () => {
+                console.error("IMAGE LOAD FAILED:", url);
+            };
 
-function startImageSequence() {
-  stopImageSequence();
+            active.src = url;
 
-  imageIndex = 0;
-  showImage(imageIndex);
+            if (active.complete && active.naturalHeight !== 0) active.onload();
+        }
 
-  imageTimer = setInterval(() => {
-    if (transportState !== "PLAY") return;
+        function startImages() {
+            clearInterval(timer);
+            imageIndex = 0;
+            showImage(imageIndex);
 
-    imageIndex = (imageIndex + 1) % IMAGE_COUNT;
-    showImage(imageIndex);
+            timer = setInterval(() => {
+                if (!playing || !imageList.length) return;
+                imageIndex = (imageIndex + 1) % imageList.length;
+                showImage(imageIndex);
+            }, IMAGE_INTERVAL);
+        }
 
-  }, IMAGE_DURATION_MS);
-}
+        function stopImages() {
+            clearInterval(timer);
+            timer = null;
+            imageIndex = 0;
+            frame1.classList.remove("opacity-100");
+            frame2.classList.remove("opacity-100");
+        }
 
-function pauseImageSequence() {
-  clearInterval(imageTimer);
-  imageTimer = null;
-}
+        /* ===== YOUTUBE ===== */
+        function onYouTubeIframeAPIReady() {
+            console.log("YouTube API Ready");
+            ytPlayer = new YT.Player("youtube-player", {
+                videoId: VIDEO_ID,
+                playerVars: {
+                    autoplay: 0,
+                    controls: 0,
+                    disablekb: 1,
+                    rel: 0,
+                    playsinline: 1
+                },
+                events: {
+                    'onReady': function (event) {
+                        console.log("YouTube Player Ready");
+                        ytReady = true;
+                    },
+                    'onStateChange': function (event) {
+                        console.log("Player state:", event.data);
+                    }
+                }
+            });
+        }
 
-function stopImageSequence() {
-  clearInterval(imageTimer);
-  imageTimer = null;
-  imageIndex = 0;
+        /* ===== TRANSPORT ===== */
+        function play() {
+            console.log("Play clicked. imageList:", imageList.length);
+            if (playing) return;
+            playing = true;
+            startImages();
+            ytPlayer.playVideo();
+        }
 
-  imgA.classList.remove("active");
-  imgB.classList.remove("active");
-}
+        function pause() {
+            console.log("Pause clicked");
+            playing = false;
+            clearInterval(timer);
+            if (ytReady) ytPlayer.pauseVideo();
+        }
 
-/* ======================================================
-   YOUTUBE
-   ====================================================== */
+        function stop() {
+            console.log("Stop clicked");
+            playing = false;
+            stopImages();
+            if (ytReady) {
+                ytPlayer.pauseVideo();
+                ytPlayer.seekTo(0, true);
+            }
+        }
 
-function onYouTubeIframeAPIReady() {
-  ytPlayer = new YT.Player("youtube-player", {
-    width: "100%",
-    height: "100%",
-    videoId: VIDEO_ID,
-    playerVars: {
-      autoplay: 0,
-      controls: 0,
-      disablekb: 1,
-      modestbranding: 1,
-      rel: 0,
-      playsinline: 1
-    }
-  });
-}
-
-/* ======================================================
-   TRANSPORT CONTROLS (THE CORE TEST)
-   ====================================================== */
-
-function transportPlay() {
-  if (transportState === "PLAY") return;
-  transportState = "PLAY";
-
-  startImageSequence();
-  ytPlayer.playVideo();
-}
-
-function transportPause() {
-  if (transportState !== "PLAY") return;
-  transportState = "PAUSE";
-
-  pauseImageSequence();
-  ytPlayer.pauseVideo();
-}
-
-function transportStop() {
-  transportState = "STOP";
-
-  stopImageSequence();
-  ytPlayer.pauseVideo();
-  ytPlayer.seekTo(0, true);
-}
-</script>
+        /* ===== INIT ===== */
+        loadGallery();
+    </script>
 
 </body>
+
 </html>
