--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -190,9 +190,10 @@
                                 class="absolute inset-0 w-full h-full object-cover story-image opacity-0 z-0 transition-opacity duration-1000">
                         </div>
 
-                        <!-- YouTube Player (hidden by default, shown when showVideo: true) -->
-                        <div id="youtube-player"
-                            class="absolute inset-0 w-full h-full z-[-1] opacity-0 pointer-events-none"></div>
+                        <!-- YouTube Player - Positioned OFF-SCREEN (not opacity:0) to avoid browser media suspension -->
+                        <!-- The "Covered Visible Player" pattern: technically visible but not seen by user -->
+                        <div id="youtube-player" class="fixed w-1 h-1 pointer-events-none"
+                            style="left: -9999px; top: -9999px;"></div>
 
                         <div
                             class="absolute inset-0 bg-gradient-to-b from-black/30 via-black/40 to-black/60 z-0 pointer-events-none">
