--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -9,6 +9,17 @@
     <!-- External CDN Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <!-- YouTube API Race Condition Fix: Queue callback if youtube-player.js hasn't loaded yet -->
+    <script>
+        var ytApiReady = false;
+        function onYouTubeIframeAPIReady() {
+            if (typeof initYouTubePlayer === 'function') {
+                initYouTubePlayer();
+            } else {
+                ytApiReady = true;
+            }
+        }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
         rel="stylesheet" />
     <link
