--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -8,7 +8,7 @@
 
     <!-- External CDN Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <!-- YouTube API loaded at end of body after youtube-player.js -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
         rel="stylesheet" />
     <link
@@ -399,6 +399,8 @@
     <script src="js/data-articles.js"></script>
     <script src="js/gallery.js"></script>
     <script src="js/youtube-player.js"></script>
+    <!-- YouTube API MUST load AFTER youtube-player.js so onYouTubeIframeAPIReady exists -->
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="js/ui.js"></script>
     <script src="js/cipher-game.js"></script>
     <script src="js/main.js"></script>
