--- a/zones/ethel_gallery/index.html
+++ b/zones/ethel_gallery/index.html
@@ -502,7 +502,7 @@
         // --- CONFIGURATION ---
         // Use external data if available, fallback to inline
         const SONG_DATA = (typeof ARCHIVE_DATA !== 'undefined') ? ARCHIVE_DATA : [];
-        const IMAGE_BASE = (typeof IMG_BASE !== 'undefined') ? IMG_BASE : "https://raw.githubusercontent.com/NJsalubrious/pixelstortion-assets/library/media_covers_album/";
+        const IMAGE_BASE = (typeof IMG_BASE !== 'undefined') ? IMG_BASE : "../../library/media_covers_album/";
 
         // Format: { id, title, artist, date, videoId, img, story, lyrics }
         // NOTE: This is fallback data - external ethel_lyrics_data.js takes priority
